# garmin-coach

./: .gitignore  CLAUDE.md  README.md  alembic.ini  bot.py  claude_analyst.py  garmin_client.py  logging_setup.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 23a723972a13_add_users_table.py  (+32 more)
app/: baselines.py  charts.py  cli.py  compare.py  completeness.py  correlations.py  dependencies.py  deploy.py  efficiency.py  format.py  fueling.py  gap.py  gear.py  goal.py  health.py  injury.py  main.py  mcp_server.py  multisport.py  race.py  records.py  sleepnudge.py  statutil.py  stepmatch.py  subjective.py  weather.py  wrapped.py
bot/: admin_main.py  handlers.py  jobs.py  main.py
deploy/: garmin-admin-bot.service  garmin-bot.service  garmin-web.service  sudoers-garmin-deploy
garmin_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: backup_db.py  migrate.sh  oneoff_plan_fixes.py  ops01_recon_gconn.py  restart_services.sh
tests/: conftest.py  test_activity_planned.py  test_activity_series.py  test_admin_bot.py  test_analysis.py  test_ask_agent.py  test_backup_db.py  test_baselines.py  test_bot_error_handler.py  test_cache_bypass.py  test_chat.py  test_checkin.py  test_client_workouts.py  test_compare.py  test_completeness.py  test_convert_easy_hr.py  test_correlations.py  test_costs.py  test_crypto.py  test_cycling_intake.py  test_dashboard.py  test_delivery.py  test_deload.py  test_deploy.py  test_digest.py  test_efficiency.py  test_export_import.py  test_fix_stride_paces.py  test_fueling.py  test_gap.py  test_garmin_disk_cache.py  test_garmin_errors.py  test_garmin_mfa.py  test_garmin_service.py  test_gear.py  test_goal.py  test_health.py  test_hide_activity.py  test_injury.py  test_job_runs.py  (+42 more)
(+165 files in other folders)
