[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-bot"
version = "1.0.0"
description = "Garmin → Claude analysis: a Telegram bot + FastAPI web layer over a shared core."
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "alembic",
    "aiosqlite",
    "asyncpg",
    "anthropic",
    "python-telegram-bot[job-queue]",
    "garth==0.4.47",   # pinned: 0.8.x SSO flow gets 429'd by Garmin; 0.4.47 works
    "garminconnect",
    "python-dotenv",
    "cryptography",       # Fernet encryption of stored credentials
    "bcrypt",             # password hashing for web login
    "itsdangerous",       # signed cookie sessions (starlette SessionMiddleware)
    "python-multipart",   # HTML form parsing (login / settings POST)
    "fitparse",           # parse pace/HR series from FIT files in a Garmin export
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]
mcp = [
    "mcp",   # NF-08: personal read-only MCP server over the DB — opt-in, not a base dep
]

[tool.setuptools]
packages = ["app", "app.core", "app.db", "app.garmin", "app.analysis", "app.routers", "bot"]

[tool.setuptools.package-data]
app = ["templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["alembic/versions"]  # autogenerated migrations

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E731"]  # assigned lambdas are intentional in the aggregation code
